<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/svAlarmDetails"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/ablTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Alarm Details"
                app:titleTextColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                />
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Time Picker -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/ablTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                tools:text="08:30 AM"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_10sdp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/labelInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/timeInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/labelEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alarm_label_hint"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_10sdp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Repeat Days -->
        <TextView
            android:id="@+id/repeatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/repeat"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintTop_toBottomOf="@+id/labelInputLayout"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/daysChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:singleSelection="false"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/repeatLabel">

            <!-- Chips will be added programmatically for each day -->
        </com.google.android.material.chip.ChipGroup>

        <!-- Snooze Duration -->
        <TextView
            android:id="@+id/snoozeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/snooze_duration"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintTop_toBottomOf="@+id/daysChipGroup"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.slider.Slider
            android:id="@+id/snoozeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:valueFrom="5"
            android:valueTo="30"
            android:stepSize="5"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/snoozeLabel" />

        <TextView
            android:id="@+id/snoozeValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@+id/snoozeSlider"
            app:layout_constraintTop_toBottomOf="@+id/snoozeSlider"
            tools:text="5 minutes" />

        <!-- Difficulty -->
        <TextView
            android:id="@+id/difficultyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/difficulty"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintTop_toBottomOf="@+id/snoozeValueText"
            app:layout_constraintStart_toStartOf="parent"
            />

        <RadioGroup
            android:id="@+id/difficultyRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/difficultyLabel">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/noneRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/easyRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/easy" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mediumRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/medium" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/hardRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hard" />
        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/vibrateSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/vibrate"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/difficultyRadioGroup" />

        <!-- Action Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/vibrateSwitch">

            <TextView
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:background="@drawable/black_50cornered_stroked_bg"
                android:layout_marginEnd="@dimen/_5sdp"
                />
            <TextView
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:background="@drawable/ripple_green_50cornered_bg"
                android:layout_marginEnd="@dimen/_5sdp"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>